# piltover

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  telethon_test.py  test.py
.github/workflows/: ci.yml
piltover/: __main__.py  connection.py  enums.py  exceptions.py  server.py  utils.py
piltover/tl/: __init__.py  tl.py  types.py
piltover/types/: __init__.py  keys.py  primitive.py
piltover/utils/: __init__.py  buffered_stream.py  gen_primes.py  rsa_pairs.py  rsa_utils.py  utils.py
tools/: gen_tl.py  websocket_proxy.js  websocket_proxy.py
tools/output/: api_tl.py
tools/templates/: template.jinja2
