[tool.poetry]
name = "piltover"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^41.0.2"
tgcrypto = "^1.2.5"
uvloop = "^0.17.0"
loguru = "^0.7.0"
icecream = "^2.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
jinja2 = "^3.1.2"
httpx = "^0.24.1"
jurigged = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
