[tool.poetry]
name = "piltover"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^42.0.8"
tgcrypto = "^1.2.5"
uvloop = "^0.19.0"
loguru = "^0.7.2"
icecream = "^2.1.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
jinja2 = "^3.1.4"
httpx = "^0.27.0"
jurigged = "^0.5.8"
websockets = "^12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
